--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Циклы</h1>
     
-    <script src="./constants.js"></script>
-    <script src="./index.js"></script>
+    <script src="./js/constants.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
